[tool.poetry]
name = "profile_binr"
version = "0.1.0"
description = ""
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
rpy2 = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
